<resources>
    <string name="playstore_link">https://play.google.com/store/apps/details?id=com.cyb3rko.flashdim</string>
    <string name="settings">Settings</string>
    <string name="dialog_not_supported_title">Device not supported</string>
    <string name="dialog_not_supported_message">This device does not have a flash light.</string>
    <string name="dialog_not_supported_button">Exit</string>
    <string name="dialog_morse_title">Flash morse code</string>
    <string name="dialog_morse_input_hint">Your Message</string>
    <string name="dialog_morse_error_empty">Please enter your message</string>
    <string name="dialog_morse_error_length">Maximum length (200) exceeded</string>
    <string name="dialog_morse_error_characters">Use characters a–z, A–Z, 0–9 and space</string>
    <string name="dialog_morse_button">Flash</string>
    <string name="dialog_interval_title">Interval Flash</string>
    <string name="dialog_interval_seizure_warning">⚠️ <b>Seizure Warning</b>: Flashing light</string>
    <string name="dialog_interval_input_hint1">Interval time (200–10000ms)</string>
    <string name="dialog_interval_input_hint2">Beats per minute (10–200)</string>
    <string name="dialog_interval_error">Value not allowed</string>
    <string name="dialog_interval_group_button1">Time</string>
    <string name="dialog_interval_group_button2">BPM</string>
    <string name="dialog_interval_button1">Flash</string>
    <string name="dialog_interval_button2">Stop</string>
    <string name="dialog_restart_title">Restart app?</string>
    <string name="dialog_restart_message">For performance reasons the change will be visible on next app start.\n\nDo you want to restart now?</string>
    <string name="dialog_restart_positive_button">Okay</string>
    <string name="dialog_restart_negative_button">Later</string>
    <string name="dialog_accessibility_title">Accessibility Service Info</string>
    <string name="dialog_accessibility_message">For this feature to work FlashDim uses an accessibility service. It is able to read key events and react to the click of the volume buttons.\n\nI do not collect any kind of data other than the volume button key events. To verify that, you can access this app\'s source code on GitHub.</string>
    <string name="dialog_accessibility_button1">Proceed</string>
    <string name="dialog_accessibility_button2">Cancel</string>
    <string name="hint_dim_not_supported">This device only supports 1 light level.\nDim feature deactivated.</string>
    <string name="light_level_sos">SOS mode</string>
    <string name="light_level_morse">Morse mode</string>
    <string name="textview_quick_actions_title">Quick Actions</string>
    <string name="textview_quick_actions_morse">Morse:\n%1$s (%2$s)</string>
    <string name="textview_light_level_text">Light Level:</string>
    <string name="button_sos_text">SOS</string>
    <string name="button_morse_text">Morse</string>
    <string name="button_interval_text">Interval</string>
    <string name="button_max_maximum">Maximum</string>
    <string name="button_max_on">On</string>
    <string name="button_half_text">Half</string>
    <string name="button_minimum_text">Minimum</string>
    <string name="button_off_text">Off</string>
    <string name="dialog_links_title">Links</string>
    <string name="dialog_links_button">Visit</string>
re    <string name="dialog_links_github">Repository on GitHub</string>
    <string name="dialog_links_matrix">Matrix chat room (questions, feedback, discussions)</string>
    <string name="dialog_links_donate">Feel free to support me with a small donation ❤️</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_button1">Show Icon Credits</string>
    <string name="dialog_about_button2">Copy device info</string>
    <string name="dialog_credits_title">Icon Credits</string>
    <string name="dialog_credits_message">information-slab-circle-outline created by Jeff Anders - Pictogrammers\n\nvibrate created by Google - Pictogrammers\n\nrocket-launch-outline created by Michael Irigoyen - Pictogrammers</string>
    <string name="dialog_credits_button">Open Pictogrammers</string>
    <string name="dialog_device_support_title">Device Support</string>
    <string name="dialog_device_support_message1">It seems that your device does support flashlight dimming, even though it was reported otherwise.\n\nPlease consider contacting me to let me know via Matrix, GitHub or email (niko@cyb3rko.de).</string>
    <string name="dialog_device_support_button1_1">Open Matrix chat room</string>
    <string name="dialog_device_support_button1_2">Open GitHub thread</string>
    <string name="dialog_device_support_button1_3">Send email</string>
    <string name="dialog_device_support_message2">Unfortunately your device does not support dimming the flashlight.\n\nThis model has not been reported yet as \'not supported\'. Please consider contacting me to let me know via Matrix, GitHub or email (niko@cyb3rko.de).</string>
    <string name="dialog_device_support_toast">Device information copied</string>
    <string name="toast_url_failed">Opening URL failed, copied URL instead</string>
    <string name="toast_intent_failed">Opening intent failed</string>
    <string name="preference_about">by Cyb3rKo</string>
    <string name="preference_category_flashlight">Flashlight controls</string>
    <string name="preference_item_instant_flash">Instant flash</string>
    <string name="preference_item_instant_flash_summary">Activate flashlight on app startup</string>
    <string name="preference_item_instant_flash_extension">Instant flash extension</string>
    <string name="preference_item_instant_flash_extension_summary">Activate flashlight every time you open the app</string>
    <string name="preference_item_pause_flash">Context awareness</string>
    <string name="preference_item_pause_flash_summary">Turn off the flashlight when leaving the app</string>
    <string name="preference_item_preferred_level">Preferred level</string>
    <string name="preference_item_preferred_level_summary">Dim level for \'Instant flash\', optionally for quick settings tile and volume button service</string>
    <string name="preference_item_preferred_level_dialog_title">Set preferred level</string>
    <string name="preference_item_preferred_level_dialog_message">New: %1$d\nCurrent: %2$d</string>
    <string name="preference_item_preferred_level_dialog_negative_button">Cancel</string>
    <string name="preference_item_torch_preactivation">Fix brightness control</string>
    <string name="preference_item_torch_preactivation_summary">Turn on if your flashlight sometimes ignores brightness changes</string>
    <string name="preference_category_quick_access">Quick access</string>
    <string name="preference_item_quick_settings_simple">Quick settings toggle mode</string>
    <string name="preference_item_quick_settings_simple_summary">Instead of dimming mode, allow the quick settings tile to only toggle the flash on and off</string>
    <string name="preference_item_quick_settings_link">Quick settings toggle link</string>
    <string name="preference_item_quick_settings_link_summary">Link the preferred level to the quick settings tile</string>
    <string name="preference_item_volume_buttons">Volume buttons service</string>
    <string name="preference_item_volume_buttons_summary">Activate the service for toggling the flashlight when pressing both volume buttons</string>
    <string name="preference_item_volume_buttons_link">Volume buttons link</string>
    <string name="preference_item_volume_buttons_link_summary">Link the preferred level to the volume buttons service</string>
    <string name="preference_category_vibration">Vibration</string>
    <string name="preference_item_tactile_buttons">Tactile buttons</string>
    <string name="preference_item_tactile_buttons_summary">Vibrate on button clicks and seekbar swipes</string>
    <string name="preference_item_tactile_morse">Tactile morse</string>
    <string name="preference_item_tactile_morse_summary">Vibrate morse code when flashing</string>
    <string name="accessibility_service_summary">When enabled, pressing both volume buttons toggles the flashlight.</string>
    <string name="accessibility_service_description">This accessibility setting allows to toggle the flashlight by pressing both volume buttons together.\n\nDo not activate a shortcut for this service on this page, that could override the key event.</string>
    <string name="shortcut_min_short">Minimum</string>
    <string name="shortcut_min_long">Minimum Brightness</string>
    <string name="shortcut_half_short">Half</string>
    <string name="shortcut_half_long">Half Brightness</string>
    <string name="shortcut_max_short">Maximum</string>
    <string name="shortcut_max_long">Maximum Brightness</string>
</resources>
